# dagster-mcp

./: .gitignore  README.md  pyproject.toml  smithery.yaml
.github/: release.yml
.github/workflows/: publish.yml  release.yml  tests.yml
dagster_mcp/: __main__.py  server.py
tests/: conftest.py  test_assets.py  test_gql.py  test_headers.py  test_instance.py  test_multienv.py  test_ops.py  test_runs.py  test_write_tools.py
